# jade

./: .gitignore  Cargo.toml
src/: main.rs
src/prompts/: system_prompt.txt
