[package]
name = "jade"
version = "0.1.0"
edition = "2024"

[dependencies]
console = "0.16.2"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
indicatif = "0.18.3"
